# md410_2021_conv_aws

./: pyproject.toml  upload_lambda.sh
app/: dynamo_scripts.txt  lambda_function.py  reg_form_data_create.py  send_email.py
